[gd_scene load_steps=10 format=3 uid="uid://cruh8bbcfvyvr"]

[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="1_blg2x"]
[ext_resource type="PackedScene" uid="uid://bt33j5dwxano3" path="res://scenes/top_ui.tscn" id="2_wrbvl"]
[ext_resource type="Texture2D" uid="uid://cdunkljd6up72" path="res://assets/bottom_ui.png" id="3_jy0d4"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_4jr62"]
[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="4_82744"]
[ext_resource type="Script" path="res://scripts/icing_holder.gd" id="5_bc8ov"]
[ext_resource type="Script" path="res://scripts/lock_holder.gd" id="6_tpthp"]
[ext_resource type="Script" path="res://scripts/jelly_holder.gd" id="8_xhtgt"]
[ext_resource type="Script" path="res://scripts/slime_holder.gd" id="9_k5sgk"]

[node name="Game" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("1_blg2x")

[node name="top_ui" parent="." instance=ExtResource("2_wrbvl")]

[node name="bottom_ui" type="TextureRect" parent="."]
z_index = 2
offset_top = 928.0
offset_right = 576.0
offset_bottom = 1020.0
texture = ExtResource("3_jy0d4")

[node name="MarginContainer" type="MarginContainer" parent="bottom_ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="bottom_ui/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="bottom_ui/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.0745098, 0.0588235, 0.827451)
theme_override_fonts/font = ExtResource("4_82744")
theme_override_font_sizes/font_size = 40
text = "BOMB!"
horizontal_alignment = 1

[node name="jelly_holder" type="Node2D" parent="."]
script = ExtResource("8_xhtgt")

[node name="grid" type="Node2D" parent="."]
script = ExtResource("4_4jr62")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2
icing_spaces = PackedVector2Array(0, 0)
lock_spaces = PackedVector2Array(3, 4, 3, 5, 4, 4, 4, 5)
can_bomb = true
can_color_bomb = true
timer = true
counter = 60
move_counter = 40
target_score = 800

[node name="clock" type="Timer" parent="grid"]

[node name="icing_holder" type="Node2D" parent="."]
script = ExtResource("5_bc8ov")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource("6_tpthp")

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource("9_k5sgk")

[connection signal="remove_jelly" from="jelly_holder" to="grid" method="_on_jelly_holder_remove_jelly"]
[connection signal="damage_icing" from="grid" to="icing_holder" method="_on_grid_damage_icing"]
[connection signal="damage_jelly" from="grid" to="jelly_holder" method="_on_grid_damage_jelly"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]
[connection signal="make_icing" from="grid" to="icing_holder" method="_on_grid_make_icing"]
[connection signal="make_jelly" from="grid" to="jelly_holder" method="_on_grid_make_jelly"]
[connection signal="make_lock" from="grid" to="lock_holder" method="_on_grid_make_lock"]
[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]
[connection signal="update_move_counter" from="grid" to="top_ui" method="_on_grid_update_move_counter"]
[connection signal="update_score" from="grid" to="top_ui" method="_on_grid_update_score"]
[connection signal="update_timer" from="grid" to="top_ui" method="_on_grid_update_timer"]
[connection signal="timeout" from="grid/clock" to="grid" method="_on_clock_timeout"]
[connection signal="remove_icing" from="icing_holder" to="grid" method="_on_icing_holder_remove_icing"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]
